<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="content_description">ImageView</string>

    <string name="app_name">MeTime</string>
    <string name="ss_text1">ME TIME</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //signUp - signIn
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="or">Or</string>
    <string name="dont_have_account">Not Have Account?</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="password_must_be_at_least_6_characters">Password must be at least 6 characters</string>
    <string name="register_successfully">Register Successfully</string>

    //Dashboard
    <string name="get_your_goals">Get Your Goals </string>
    <string name="set_your_time">Set Your Time</string>
    <string name="thinking_your_idea">Thinking Your Idea</string>

    //OnBoard
    <string name="onborad_satu_h1">Manage Your Idea</string>
    <string name="onborad_satu_h2">Save Your ideas, find your true potential</string>

    <string name="onborad_dua_h1">Organize Your Schedule</string>
    <string name="onborad_dua_h2">Do not miss any chance, stay organized </string>

    <string name="onborad_tiga_h1">Be Time Efficient</string>
    <string name="onborad_tiga_h2">Time is money, so do not waste any of it!</string>

    <string name="lanjut">Next</string>
    <string name="mulai">Start</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    //calender
    <string name="today_actvity">Today Activity</string>
    <string name="add_agenda">Add Activity</string>
    <string name="today">Today</string>
    <string name="title">Title</string>
    <string name="detail">Detail</string>
    <string name="time">Time</string>
    <string name="add_your_activity_here">add your activity here</string>
    <string name="add_your_detail_activity_here">add your detail activity here</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="activity_added">Activity Added</string>
    <string name="activity_not_added">Activity Not Added</string>
    <string name="field_cannot_empty">Field cannot be empty</string>
    <string name="acctivity_has_been_updated">Activity Has Been Updated</string>
    <string name="fail_to_update_the_activity">Fail to Update The Activity</string>
    <string name="error_delete_document">Error delete activity</string>
    <string name="document_was_delete">Activity was delete</string>
    <string name="data_error">Data Error</string>
    <string name="fail_to_get_data">Fail to get data</string>
    <string name="delete_activity">"Delete Activity?"</string>
    <string name="do_you_want_to_remove_this_activity">Do you want to remove this activity?</string>

    //timetracking
    <string name="what_are_you_working">what are you working?</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="title_cannot_empty">Title cannot be empty</string>
    <string name="zero_time">00:00</string>
    <string name="delete_time_tracking">"Delete Time Tracking?"</string>
    <string name="do_you_want_to_remove_this_time_tracking">Do you want to remove this time tracking?</string>

    //widget
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>


    //noteApps
    <string name="note_added">Note Added</string>
    <string name="note_saved">Note Saved</string>
    <string name="error_try_again">Error, try Again</string>
    <string name="no_title">No Title</string>
    <string name="write_your_note_here">Write Your Note Here</string>
    <string name="cannot_save_with_empty_field">Cannot save with empty field</string>
    <string name="delete_notes">Delete Note</string>
    <string name="do_you_want_to_delete_this_note">Do you want to delete this note?</string>
    <string name="error_in_deleting_notes">Error in deleting Notes</string>
    <string name="note_deleted">Note Deleted</string>


    //profile
    <string name="loading">Loading</string>
    <string name="about_application">About Aplication</string>
    <string name="version">Version :</string>
    <string name="our_team">Our Team</string>
    <string name="help_center">Help Center</string>
    <string name="language">Language</string>
    <string name="select_your_language">Select your language </string>
    <string name="how_to_track_your_time">How to Track Your Time</string>
    <string name="click_the_button_then_fill_the_activity_coloumn_and_click_start_button">Click the clock button, then fill the activity column and click start button</string>
    <string name="how_to_add_your_schedule">How to add your schedule</string>
    <string name="click_the_calendar_button_then_click_the_plus_button_on_the_my_schedule_page_now_you_can_adjust_your_schedule">Click the calendar button,then click the plus button on the My Schedule page. Now you can adjust your schedule.</string>
    <string name="how_to_take_a_notes">How to take a notes</string>
    <string name="click_the_notes_button_then_click_the_plus_button_on_the_my_notes_page">Click the notes button, then click the plus button on the My Notes page</string>
    <string name="logout">Log Out</string>
    <string name="do_you_want_log_out_from_yout_account">Do you want to out from your acount?</string>

    //editProfile
    <string name="choose_image">Choose Image</string>
    <string name="update_profile">UPDATE PROFILE</string>
    <string name="user_name">User Name</string>
    <string name="input_your_name">Input your name</string>
    <string name="input_your_email">Input your email</string>

</resources>