<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.github.florent37.expansionpanel.ExpansionHeader
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/sampleHeader"
        app:expansion_headerIndicator="@id/headerIndicator"
        app:expansion_layout="@id/expansionLayoutHelpCenter"
        app:expansion_toggleOnClick="true">

        <RelativeLayout
            android:background="@android:color/white"
            android:layout_height="48dp"
            android:layout_width="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/help_center"
                android:textSize="14sp"
                android:textColor="#3E3E3E" />


            <androidx.appcompat.widget.AppCompatImageView
                android:adjustViewBounds="true"
                android:id="@+id/headerIndicator"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                app:srcCompat="@drawable/ic_expansion_header_indicator_grey_24dp" />

        </RelativeLayout>

    </com.github.florent37.expansionpanel.ExpansionHeader>

    <com.github.florent37.expansionpanel.ExpansionLayout
        android:id="@+id/expansionLayoutHelpCenter"
        app:expansion_expanded="false"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <LinearLayout
            android:id="@+id/container"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="26dp"
            android:paddingRight="26dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/how_to_track_your_time"
                android:textColor="@color/black"
                android:textSize="14sp"/>
            <TextView
                android:layout_marginStart="8dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:textSize="14sp"
                android:text="@string/click_the_button_then_fill_the_activity_coloumn_and_click_start_button" />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/how_to_add_your_schedule" />
            <TextView
                android:layout_marginStart="8dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:textSize="14sp"
                android:text="@string/click_the_calendar_button_then_click_the_plus_button_on_the_my_schedule_page_now_you_can_adjust_your_schedule" />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/how_to_take_a_notes" />
            <TextView
                android:layout_marginStart="8dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:textSize="14sp"
                android:text="@string/click_the_notes_button_then_click_the_plus_button_on_the_my_notes_page" />

        </LinearLayout>

    </com.github.florent37.expansionpanel.ExpansionLayout>
</LinearLayout>