<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.EditProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_medium"
                android:text="Edit Profile"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        style="@style/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="14dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_photo_edit"
                    style="@style/ImageViewProfile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"/>

                <Button
                    android:id="@+id/btn_img_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_image"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"/>

            </LinearLayout>
            <EditText
                style="@style/EditText"
                android:id="@+id/txt_username_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"/>

            <EditText
                style="@style/EditText"
                android:id="@+id/txt_email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/email"/>

            <Button
                android:id="@+id/btn_save_edit"
                style="@style/Button.Primary"
                android:text="@string/update_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                />
        </LinearLayout>

    </ScrollView>
</LinearLayout>