<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.DashboardFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ui.MainActivity"
        android:paddingTop="20dp"
        android:paddingHorizontal="27dp">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="Hello, "
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/welcome"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            style="@style/ImageViewProfile"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true" />

        <TextView
            android:id="@+id/txt_goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:text="@string/get_your_goals" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_activity_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_above="@+id/time"
            android:layout_below="@+id/txt_goal"
            tools:listitem="@layout/item_activity" />
        <ImageView
            android:id="@+id/goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:background="@drawable/image_goals"
            android:visibility="visible"
            />


        <TextView
            android:id="@+id/txt_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginStart="16dp"
            android:layout_below="@id/goal"
            android:text="@string/set_your_time" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_time_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_time"
            android:layout_above="@+id/idea"
            android:layout_marginTop="8dp"
            tools:listitem="@layout/item_time_tracking" />
        <ImageView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/goal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:background="@drawable/image_time"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/txt_idea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/time"
            android:layout_marginTop="36dp"
            android:layout_marginStart="16dp"
            android:text="@string/thinking_your_idea" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_note_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/txt_idea"
            android:layout_alignBottom="@+id/idea"
            tools:listitem="@layout/note_view_layout" />
        <ImageView
            android:id="@+id/idea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/time"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:background="@drawable/image_idea"
            android:visibility="visible"
            />





    </RelativeLayout>

</FrameLayout>